make front face better

--- a/profile/README.org
+++ b/profile/README.org
@@ -1,7 +1,9 @@
 #+title: awfulbytes
 #+subtitle: Making sounds from bytes
 
-* Goals
+[[file:./awfulbytes.jpg]]
+
+* daily habits
 - Create things as they should function
 - Manipulate sound waves with voltage and code
 - Many more...
